Basic rag frontend

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,8 @@ repos:
           - fastapi
           - django
           - django-types
+          - django-stubs
+          - httpx
 
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
