--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -9,16 +9,16 @@ jobs:
   pre-commit:
     runs-on: ubuntu-24.04
     steps:
-
-
       # 1 checkout
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Remove Useless tools
+      - name: Clearing as much disk space as possible
         run: |
-          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQ
           sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo docker image prune --all --force
+          sudo docker builder prune -a
 
       # intialize python
       - name: Set up Python
@@ -32,15 +32,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install pre-commit
           pip install -r api/requirements.txt
-
-      # cache
-      - name: Setup pre-commit cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pre-commit
-          key: ${{ runner.os }}-precommit-${{ hashFiles('.pre-commit-config.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-precommit-
 
       # run pre-commit checks again
       - name: Run pre-commit hooks
